# Hotel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Caddyfile.example  Dockerfile  PORTFOLIO.md  README.md  conftest.py  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  gunicorn_config.py  main.py  migrate_settings_data.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  update_requirements.py
.github/: COPILOT_PROMPT.md  copilot-instructions.md
.github/workflows/: ci.yml
apps/: integration_tests.py
apps/administration/: models.py  urls.py  views.py
apps/api/: tests.py  urls.py  views.py
apps/checkin_checkout/: apps.py  models.py  tests.py  urls.py  views.py
apps/finance/: apps.py  models.py  signals.py  tests.py  urls.py  views.py
apps/reports/: models.py  services.py  tests.py  urls.py  views.py
apps/reservations/: admin.py  models.py  tests.py  urls.py  views.py
apps/rooms/: admin.py  models.py  tests.py  urls.py  views.py
apps/settings_manager/: README.md  admin.py  apps.py  models.py  tests.py  urls.py  views.py
hotel_hms/: asgi.py  middleware.py  settings.py  settings_prod.py  urls.py  views.py  wsgi.py
scripts/: debug_reservations.py  debug_urls.py  seed_data.py  seed_db.py
static/css/: reports.css  styles.css
static/js/: main.js  reservations.js  rooms.js
templates/: base.html  base_test.html  home.html
templates/administration/: dashboard.html  settings.html  users.html
templates/reports/: checkins.html  (+8 more)
tests/: integration_tests.py  test_system_integration.py
(+39 files in other folders)
